# YXlsx

./: README.md  Setup.md
HelloWorld/: CMakeLists.txt  YXlsx  main.cpp
YXlsx/: CMakeLists.txt
YXlsx/api/: cell.h  coordinate.cc  coordinate.h  dimension.cc  dimension.h  document.cc  document.h  workbook.cc  workbook.h  worksheet.cc  worksheet.h  worksheet_impl.h
YXlsx/header/api/: dimension.h  worksheet.h  worksheet_impl.h
YXlsx/header/utils/: abstractooxmlfile.h  abstractsheet.h  sharedstring.h  style.h  zipreader.h
YXlsx/source/: contenttype.cc  dimension.cc  docpropsapp.cc  docpropscore.cc  relationshipmgr.cc  sharedstring.cc  utility.cc  workbook.cc  worksheet.cc
YXlsx/utils/: abstractooxmlfile.cc  abstractooxmlfile.h  contenttype.cc  contenttype.h  definedname.h  docpropsapp.cc  docpropsapp.h  docpropscore.cc  docpropscore.h  namespace.h  relationshipmanager.cc  relationshipmanager.h  sharedstring.cc  sharedstring.h  style.cc  style.h  utility.cc  utility.h  zipreader.cc  zipreader.h  zipwriter.cc  zipwriter.h
